test/classes/bradc/paramInClass/weirdParamInit4.good
weirdParamInit4.chpl:6: error: unresolved call 'C()'
weirdParamInit4.chpl:1: note: candidates are: C(param x: int)
